hotel menu page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             
             <i class="fa fa-search" aria-hidden="true">Search</i>
             <i class="fa fa-gift" aria-hidden="true">Offers</i>
-            <i class="fa fa-cart-plus" id="cart-plus">0 Items</i>
+            <i class="fa fa-cart-plus" id="cart-plus">Items</i>
             
         </div>
         </div>
@@ -331,6 +331,40 @@
 
 
 
+<section>
+    <div class="footer">
+        <div class="card-1">
+            <div class="box-3">
+
+
+                <h1>Copyright@2010-2022 OnLine Food.All Rights Reserved!</h1>
+            </div>
+
+            <div class="box-1">
+
+                <h1>QUICK LINKS</h1>
+
+                <li><a href="index.html">About</a></li>
+                <li><a href="wishlist.html">WishList</a></li>
+                <li><a href="services.html">Services</a></li>
+
+            </div>
+
+
+            <div class="box-2">
+
+                <h1>FOLLOW US</h1>
+                <a href="http://web.whatsapp.com"><img src="what.jpeg" width="50" height="50" alt></a>
+                <a href="#"><img src="face.png" width="50" height="50" alt></a>
+                <a href="#"><img src="twitter.png" width="50" height="50" alt></a>
+
+            </div>
+
+
+        </div>
+    </div>
+    </footer>
+    </section>
 
 
 
